Replace flickering pictures with tikz-timing figure. Improve visual stimuli section.

--- a/thesis/myStyle.sty
+++ b/thesis/myStyle.sty
@@ -7,6 +7,9 @@
 %\usepackage{mathtools}					% for curly braces under equation. Also includes amsmath.
 \usepackage[inline,shortlabels]{enumitem}% for alphabetical enumerate or inline list.
 \usepackage[pdftitle={Control a Robot via VEP Using Emotiv EPOC},pdfauthor={Anti Ingel},hidelinks]{hyperref}
+\usepackage{pgfplots}
+\usepackage{tikz-timing}
+\usetikztiminglibrary{nicetabs} 
 
 \usepackage[nogroupskip, acronym]{glossaries}	% for acronyms
 \renewcommand{\glossarysection}[2][]{}			% no title for glossary
