--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -332,6 +332,51 @@ Related work
 	language={English}
 }
 
+Emotiv EPOC
+
+@article{emotiv_hybrid,
+	title = {A Low-Cost {EEG} System-Based Hybrid Brain-Computer Interface for Humanoid Robot Navigation and Recognition},
+	author = {Bongjae Choi, Sungho Jo},
+	journal = {PLoS ONE},
+	volume = {8},
+	number = {9},
+	year = {2013},
+	url = {http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0074583}
+}
+
+@mastersthesis{emotiv_psda,
+	title = {{SSVEP}-BASED BRAIN COMPUTER INTERFACE USING THE {Emotiv EPOC}},
+	author = {Brian J. Zier},
+	school = {Eastern Washington University},
+	year = {2012}
+}
+
+@mastersthesis{emotiv_comparison,
+	title = {A Comparison of Visual Evoked Potential ({VEP})-Based Methods for the Low-Cost {Emotiv EPOC} Neuroheadset},
+	author = {Fredrik Tron Hvaring and Andreas H Ulltveit-Moe},
+	school = {Norwegian University of Science and Technology},
+	year = {2014}
+}
+
+@article{emotiv_walking,
+	title = {Assessing the feasibility of online {SSVEP} decoding in human walking using a consumer {EEG} headset},
+	author = {Yuan-Pin Lin and Yijun Wang and Tzyy-Ping Jung},
+	journal = {NeuroEngineering and Rehabilitation},
+	volume = {11},
+	number = {119},
+	year = {2014},
+	url = {http://www.jneuroengrehab.com/content/pdf/1743-0003-11-119.pdf}
+}
+
+@article{emotiv_p300_comp,
+	title = {Performance of the {Emotiv EPOC} headset for {P300}-based applications},
+	author = {Matthieu Duvinage and Thierry Castermans and Mathieu Petieau and Thomas Hoellinger and Guy Cheron and Thierry Dutoit},
+	journal = {BioMedical Engineering OnLine},
+	year = {2013},
+	volume = {12},
+	number = {56},
+	url = {http://www.biomedical-engineering-online.com/content/12/1/56}
+}
 
 Visual stimuli section
 
