--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -195,6 +195,22 @@ VEP section
 
 BCI Chapter
 
+Fourier analysis
+
+@book{pure_tone,
+	title = {Signals, Sound, and Sensation},
+	author = {William M. Hartmann},
+	publisher = {Springer Science \& Business Media},
+	year = {1997}
+}
+
+@book{psd,
+	title = {Introduction to Random Signals and Applied Kalman Filtering},
+	author = {Robert Grover Brown and Patrick Y.C. Hwang},
+	publisher = {John Wiley \& Sons},
+	year = {1997}
+}
+
 Related work
 
 @article{psda,
@@ -415,6 +431,15 @@ Visual stimuli section
 	volume = {2010},
 	year = {2010},
 	pages = {1--13}
+}
+
+@article{square_sine,
+	title = {Square or Sine: Finding a Waveform with High Success Rate of Eliciting {SSVEP}},
+	author = {Fei Teng and Yixin Chen and Aik Min Choong and Scott Gustafson and Christopher Reichley and Pamela Lawhead and Dwight Waddell1},
+	journal = {Computational Intelligence and Neuroscience},
+	volume = {2011},
+	year = {2011},
+	url = {http://www.hindawi.com/journals/cin/2011/364385/cta/}
 }
 
 PSDA section
