--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -20,7 +20,7 @@
 \newacronym{MEC}{MEC}{minimum energy combination}
 \newacronym{LASSO}{LASSO}{least absolute shrinkage and selection operator}
 \newacronym{LRT}{LRT}{likelihood ratio test}
-\newacronym{MPCC}{MCPP}{multi-phase cycle coding}
+\newacronym{MPCC}{MPCC}{multi-phase cycle coding}
 
 \newglossaryentry{neuron}{
 	name = neuron,
@@ -82,8 +82,8 @@
 	name = source,
 	description = {-- location where ions exit the postsynaptic cell after synaptic input has been received to achieve electroneutrality}
 }
-\newglossaryentry{dipole}{
-	name = dipole,
+\newglossaryentry{current dipole}{
+	name = current dipole,
 	description = {-- formed by a sink and a source around postsynaptic cell. Dipoles produce electric field that can be measured from the scalp using EEG}
 }
 \newglossaryentry{functional neuroimaging}{
@@ -138,8 +138,28 @@
 	name = feature extraction,
 	description = {--}
 }
+\newglossaryentry{square wave}{
+	name = square wave,
+	description = {--}
+}
+\newglossaryentry{rectangular wave}{
+	name = rectangular wave,
+	description = {--}
+}
+\newglossaryentry{irregular square wave}{
+	name = irregular square wave,
+	description = {--}
+}
+\newglossaryentry{duty cycle}{
+	name = duty cycle,
+	description = {--}
+}
 \newglossaryentry{harmonic}{
 	name = harmonic,
+	description = {--}
+}
+\newglossaryentry{fundamental}{
+	name = fundamental,
 	description = {--}
 }
 
